==> ChibiOS/ChibiOS-Contrib/os/hal/ports/TIVA/LLD/pwm_lld.c <==
#include "hal.h"
#define PWM_INT_CMPBD       (1 << 5)
#define PWM_INT_CMPBU       (1 << 4)
#define PWM_INT_CMPAD       (1 << 3)
#define PWM_INT_CMPAU       (1 << 2)
#define PWM_INT_CNTLOAD     (1 << 1)
#define PWM_INT_CNTZERO     (1 << 0)

void pwm_lld_init(void)
{
  /* Driver initialization.*/
#if TIVA_PWM_USE_PWM0
  pwmObjectInit(&PWMD1);
  PWMD1.channels = PWM_CHANNELS;
  PWMD1.pwm = PWM0;
#endif

#if TIVA_PWM_USE_PWM1
  pwmObjectInit(&PWMD2);
  PWMD2.channels = PWM_CHANNELS;
  PWMD2.pwm = PWM1;
#endif
}

void pwm_lld_start(PWMDriver *pwmp)
{
  uint8_t i;
  uint32_t invert = 0;
  uint32_t enable = 0;

  if (pwmp->state == PWM_STOP) {
    /* Clock activation.*/
#if TIVA_PWM_USE_PWM0
    if (&PWMD1 == pwmp) {
      SYSCTL->RCGCPWM = (1 << 0);
      nvicEnableVector(TIVA_PWM0FAULT_NUMBER,
                       TIVA_PWM_PWM0_FAULT_IRQ_PRIORITY);
      nvicEnableVector(TIVA_PWM0GEN0_NUMBER, TIVA_PWM_PWM0_0_IRQ_PRIORITY);
      nvicEnableVector(TIVA_PWM0GEN1_NUMBER, TIVA_PWM_PWM0_1_IRQ_PRIORITY);
      nvicEnableVector(TIVA_PWM0GEN2_NUMBER, TIVA_PWM_PWM0_2_IRQ_PRIORITY);
      nvicEnableVector(TIVA_PWM0GEN3_NUMBER, TIVA_PWM_PWM0_3_IRQ_PRIORITY);
    }
#endif

#if TIVA_PWM_USE_PWM1
    if (&PWMD2 == pwmp) {
      SYSCTL->RCGCPWM = (1 << 1);
      nvicEnableVector(TIVA_PWM1FAULT_NUMBER,
                       TIVA_PWM_PWM1_FAULT_IRQ_PRIORITY);
      nvicEnableVector(TIVA_PWM1GEN0_NUMBER, TIVA_PWM_PWM1_0_IRQ_PRIORITY);
      nvicEnableVector(TIVA_PWM1GEN1_NUMBER, TIVA_PWM_PWM1_1_IRQ_PRIORITY);
      nvicEnableVector(TIVA_PWM1GEN2_NUMBER, TIVA_PWM_PWM1_2_IRQ_PRIORITY);
      nvicEnableVector(TIVA_PWM1GEN3_NUMBER, TIVA_PWM_PWM1_3_IRQ_PRIORITY);
    }
#endif
  }
  else {
    /* Driver re-configuration scenario, it must be stopped first.*/
    pwmp->pwm->PWM[0].CTL = 0;
    pwmp->pwm->PWM[1].CTL = 0;
    pwmp->pwm->PWM[2].CTL = 0;
    pwmp->pwm->PWM[3].CTL = 0;
  }

  /* Timer configuration.*/
  for (i = 0; i  < (PWM_CHANNELS >> 1); i++) {
    pwmp->pwm->PWM[i].CTL = 0;
    pwmp->pwm->PWM[i].GEN[0] = 0x08C;
    pwmp->pwm->PWM[i].GEN[1] = 0x80C;
    pwmp->pwm->PWM[i].LOAD = (uint16_t)(pwmp->config->frequency - 1);
    pwmp->pwm->PWM[i].CMP[0] = (uint16_t)(pwmp->period - 1);
    pwmp->pwm->PWM[i].CMP[1] = (uint16_t)(pwmp->period - 1);
  }

  /* Output enables and polarities setup.*/
  for (i = 0; i < PWM_CHANNELS; i++) {
    switch (pwmp->config->channels[i].mode & PWM_OUTPUT_MASK) {
    case PWM_OUTPUT_DISABLED:
      enable &= ~(1 << i);
      break;
    case PWM_OUTPUT_ACTIVE_LOW:
      invert |= (1 << i);
      enable |= (1 << i);
      break;
    case PWM_OUTPUT_ACTIVE_HIGH:
      invert &= ~(1 << i);
      enable |= (1 << i);
      break;
    default:
      ;
    }
  }

  pwmp->pwm->INVERT = invert;
  pwmp->pwm->ENABLE = enable;
  pwmp->pwm->ISC = 0xFFFFFFFF;
}

void pwm_lld_stop(PWMDriver *pwmp)
{
  /* If in ready state then disables the PWM clock.*/
  if (pwmp->state == PWM_READY) {
    pwmp->pwm->PWM[0].CTL = 0;
    pwmp->pwm->PWM[1].CTL = 0;
    pwmp->pwm->PWM[2].CTL = 0;
    pwmp->pwm->PWM[3].CTL = 0;

#if TIVA_PWM_USE_PWM0
    if (&PWMD1 == pwmp) {
      nvicDisableVector(TIVA_PWM0FAULT_NUMBER);
      nvicDisableVector(TIVA_PWM0GEN0_NUMBER);
      nvicDisableVector(TIVA_PWM0GEN1_NUMBER);
      nvicDisableVector(TIVA_PWM0GEN2_NUMBER);
      nvicDisableVector(TIVA_PWM0GEN3_NUMBER);
      SYSCTL->RCGCPWM &= ~(1 << 0);
    }
#endif

#if TIVA_PWM_USE_PWM1
    if (&PWMD2 == pwmp) {
      nvicDisableVector(TIVA_PWM1FAULT_NUMBER);
      nvicDisableVector(TIVA_PWM1GEN0_NUMBER);
      nvicDisableVector(TIVA_PWM1GEN1_NUMBER);
      nvicDisableVector(TIVA_PWM1GEN2_NUMBER);
      nvicDisableVector(TIVA_PWM1GEN3_NUMBER);
      SYSCTL->RCGCPWM &= ~(1 << 1);
    }
#endif
  }
}

void pwm_lld_enable_channel(PWMDriver *pwmp,
                            pwmchannel_t channel,
                            pwmcnt_t width)
{
  /* Changing channel duty cycle on the fly.*/
  pwmp->pwm->PWM[channel >> 1].CMP[channel & 1] = width;
  pwmp->pwm->PWM[channel >> 1].CTL |= (1 << 0);
}
