==> ChibiOS/ChibiOS-Contrib/os/hal/ports/NUMICRO/M251/hal_pwm_lld.c <==
#include "hal.h"
#include "m251_isr.h"
#include "M251/stddriver/bpwm.h"
#include "M251/stddriver/clk.h"
#define BPWM_WGCTL0_CH_MASK(ch)                                           \
  (BPWM_WGCTL0_ZPCTL0_Msk << ((ch) * 2))
#define BPWM_WGCTL0_CH_PRDP_MASK(ch)                                      \
  (BPWM_WGCTL0_PRDPCTL0_Msk << ((ch) * 2))
#define BPWM_WGCTL1_CH_CMPU_MASK(ch)                                      \
  (BPWM_WGCTL1_CMPUCTL0_Msk << ((ch) * 2))
#define BPWM_WGCTL1_CH_CMPD_MASK(ch)                                      \
  (BPWM_WGCTL1_CMPDCTL0_Msk << ((ch) * 2))
#define BPWM_WGCTL0_CH_VAL(ch, val)                                       \
  (((uint32_t)(val) & 0x3U) << ((ch) * 2))
#define BPWM_WGCTL0_CH_PRDP_VAL(ch, val)                                  \
  (((uint32_t)(val) & 0x3U) << ((ch) * 2))
#define BPWM_WGCTL1_CH_CMPU_VAL(ch, val)                                  \
  (((uint32_t)(val) & 0x3U) << ((ch) * 2))
#define BPWM_WGCTL1_CH_CMPD_VAL(ch, val)                                  \
  (((uint32_t)(val) & 0x3U) << ((ch) * 2 + 16U))

void pwm_lld_init(void) {

#if (M251_PWM_USE_BPWM0 == TRUE)
  pwmObjectInit(&PWMD1);
  PWMD1.channels = PWM_CHANNELS;
  PWMD1.bpwm     = BPWM0;
  PWMD1.clock    = 0U;
  PWMD1.clock_divisor = 1U;
#endif

#if (M251_PWM_USE_BPWM1 == TRUE)
  pwmObjectInit(&PWMD2);
  PWMD2.channels = PWM_CHANNELS;
  PWMD2.bpwm     = BPWM1;
  PWMD2.clock    = 0U;
  PWMD2.clock_divisor = 1U;
#endif
}

void pwm_lld_start(PWMDriver *pwmp) {
  uint32_t psc;
  uint32_t raw_period;
  uint32_t bpwm_clk = pwmp->clock;

  if (pwmp->state == PWM_STOP) {
#if (M251_PWM_USE_BPWM0 == TRUE)
    if (pwmp == &PWMD1) {
      m251_lld_unlock();
      CLK->APBCLK1 |= CLK_APBCLK1_BPWM0CKEN_Msk;
      SYS->IPRST2 |= SYS_IPRST2_BPWM0RST_Msk;
      SYS->IPRST2 &= ~SYS_IPRST2_BPWM0RST_Msk;
      CLK->CLKSEL2 = (CLK->CLKSEL2 & ~CLK_CLKSEL2_BPWM0SEL_Msk) |
                      CLK_CLKSEL2_BPWM0SEL_PCLK0;
      m251_lld_lock();
      nvicEnableVector(M251_BPWM0_NUMBER, M251_PWM_BPWM0_IRQ_PRIORITY);
      bpwm_clk = _bpwm_get_pclk(CLK_PCLKDIV_APB0DIV_Msk,
                                CLK_PCLKDIV_APB0DIV_Pos);
    }
#endif
#if (M251_PWM_USE_BPWM1 == TRUE)
    if (pwmp == &PWMD2) {
      m251_lld_unlock();
      CLK->APBCLK1 |= CLK_APBCLK1_BPWM1CKEN_Msk;
      SYS->IPRST2 |= SYS_IPRST2_BPWM1RST_Msk;
      SYS->IPRST2 &= ~SYS_IPRST2_BPWM1RST_Msk;
      CLK->CLKSEL2 = (CLK->CLKSEL2 & ~CLK_CLKSEL2_BPWM1SEL_Msk) |
                      CLK_CLKSEL2_BPWM1SEL_PCLK1;
      m251_lld_lock();
      nvicEnableVector(M251_BPWM1_NUMBER, M251_PWM_BPWM1_IRQ_PRIORITY);
      bpwm_clk = _bpwm_get_pclk(CLK_PCLKDIV_APB1DIV_Msk,
                                CLK_PCLKDIV_APB1DIV_Pos);
    }
#endif
    pwmp->clock = bpwm_clk;
  }

  osalDbgAssert((pwmp->config->frequency > 0U) &&
                (pwmp->config->period > 0U),
                "invalid PWM configuration");

  psc = (uint32_t)(((uint64_t)pwmp->clock * pwmp->config->period +
                    (uint64_t)pwmp->config->frequency * 0x10000U - 1U) /
                   ((uint64_t)pwmp->config->frequency * 0x10000U));
  if (psc == 0U)
    psc = 1U;
  osalDbgAssert(psc <= 0x1000U, "PWM period out of range");
  pwmp->clock_divisor = (uint16_t)psc;

  raw_period = _bpwm_ticks_to_counts(pwmp, pwmp->config->period);
  osalDbgAssert((raw_period > 0U) && (raw_period <= 0x10000U),
                "PWM period out of range");

  /* A READY-to-READY start must disable the previous configuration first.*/
  pwmp->bpwm->POEN = 0U;
  pwmp->bpwm->INTEN = 0U;
  pwmp->bpwm->CTL0 = 0U;
  pwmp->bpwm->CTL1 = 0U;
  pwmp->bpwm->CNTEN = 0U;
  pwmp->bpwm->INTSTS = BPWM_INTSTS_ZIF0_Msk |
                       BPWM_INTSTS_PIF0_Msk |
                       (BPWM_INTSTS_CMPUIF0_Msk * 0x3FU) |
                       (BPWM_INTSTS_CMPDIF0_Msk * 0x3FU);

  pwmp->bpwm->CLKPSC = psc - 1U;

  for (pwmchannel_t i = 0U; i < PWM_CHANNELS; i++)
    _bpwm_configure_wgctl(pwmp, i);

  pwmp->bpwm->PERIOD = raw_period - 1U;

  pwmp->bpwm->CNTEN = BPWM_CNTEN_CNTEN0_Msk;
}

void pwm_lld_stop(PWMDriver *pwmp) {

  pwmp->bpwm->CNTEN = 0U;
  pwmp->bpwm->POEN = 0U;
  pwmp->bpwm->INTEN = 0U;

#if (M251_PWM_USE_BPWM0 == TRUE)
  if (pwmp == &PWMD1) {
    nvicDisableVector(M251_BPWM0_NUMBER);
    m251_lld_unlock();
    CLK->APBCLK1 &= ~CLK_APBCLK1_BPWM0CKEN_Msk;
    m251_lld_lock();
  }
#endif
#if (M251_PWM_USE_BPWM1 == TRUE)
  if (pwmp == &PWMD2) {
    nvicDisableVector(M251_BPWM1_NUMBER);
    m251_lld_unlock();
    CLK->APBCLK1 &= ~CLK_APBCLK1_BPWM1CKEN_Msk;
    m251_lld_lock();
  }
#endif
}

void pwm_lld_enable_channel(PWMDriver *pwmp,
                            pwmchannel_t channel,
                            pwmcnt_t width) {

  uint32_t raw_width = _bpwm_ticks_to_counts(pwmp, width);
  uint32_t raw_period = pwmp->bpwm->PERIOD + 1U;

  if (raw_width > raw_period)
    raw_width = raw_period;
  pwmp->bpwm->CMPDAT[channel] = raw_width;
  if ((pwmp->config->channels[channel].mode & PWM_OUTPUT_MASK) !=
      PWM_OUTPUT_DISABLED) {
    pwmp->bpwm->POEN |= (1UL << channel);
  }
}
